tests/reference/asr-template_03b-0778e50.stderr
tokenizer error: Token '?' is not recognized
  --> tests/../integration_tests/template_03b.f90:52:15
   |
52 |         y = my?add(y, my_mul(a, x))
   |               ^ token not recognized
